# iotedge

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Azure.IoT.Edge.DotSettings  CHANGELOG.md  Cargo.toml  CodeCoverage.runsettings  LICENSE  Makefile  Microsoft.Azure.Devices.Edge.sln  Microsoft.Azure.Devices.Edge.sln.DotSettings  README.md  SEO TIPS FOR BLOGGER  THIRDPARTYNOTICES  alertNames.txt  azure-pipelines.yml  commands  compatibility.sh  converter.playlist  dotnetVersion.props  icmlogs.txt  install.bat  install_agent.bat  install_hub.bat  install_hub.sh  netcoreappVersion.props  netstandardVersion.props  nuget.config  nuget_open.config  owners.txt  rust-toolchain.toml  stylecop.json  stylecop.props  stylecop.ruleset  temp.yaml  thirdpartynotice.txt  trademark.txt  versionInfo.json
EST-Handoff/: Cargo.toml
EST-Handoff/est_script/: certs.conf  est_cert_gen.sh  readme.md
EST-Handoff/src/: csr.rs  error.rs  lib.rs  main.rs
containrs/containrs/: Cargo.toml
containrs/containrs-cli/: Cargo.toml
containrs/containrs-cli/src/: main.rs  parse_range.rs
containrs/containrs/src/: blob.rs  client.rs  error.rs  lib.rs  paginate.rs
containrs/oci-digest/: Cargo.toml
containrs/oci-digest/src/: algorithms.rs  digest.rs  error.rs  lib.rs  serde_impl.rs  validator.rs
edge-modules/api-proxy-module/: CHANGELOG.md  Cargo.toml  build.sh  makefile  readme.md
edge-modules/api-proxy-module/.cargo/: config.toml
edge-modules/api-proxy-module/azure-iot-mqtt/: Cargo.toml  README.md
edge-modules/api-proxy-module/docker/: manifest.yaml.template
edge-modules/api-proxy-module/images/: component_diagram_architecture_proposal.wsd  concept.wsd
edge-modules/api-proxy-module/mqtt3/: README.md
edge-modules/api-proxy-module/src/: lib.rs  main.rs  shutdown.rs
edge-modules/api-proxy-module/templates/: nginx_default_config.conf
edge-modules/edge-dashboard/: Cargo.toml
edge-modules/edge-dashboard/src/: error.rs  health.rs  lib.rs  main.rs  modules.rs  settings.rs  state.rs  status.rs  test.txt
edge-modules/edgehub-proxy/: Cargo.toml  Dockerfile  README.md  build.sh  docker-entrypoint.sh  entrypoint.sh  haproxy.cfg
edge-modules/edgehub-proxy/.cargo/: config.toml
edge-modules/snitch/: Cargo.toml
edge-proxy/: Cargo.toml  README.md
edge-proxy/src/: api.rs  error.rs  lib.rs  logging.rs  main.rs  routine.rs  run.sh  settings.rs
edgelet/: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  THIRDPARTYNOTICES  clippy.toml  log  thirdpartynotice.txt  version.txt
edgelet/.cargo/: config.toml
edgelet/api/: README.md  externalProvisioningVersion_2019_04_10.yaml  hostingVersion_2019_04_10.yaml  identityServiceVersion_2020_06_01.yaml  keyServiceVersion_2020_06_01.yaml  management.yaml  managementVersion_2018_12_30.yaml  managementVersion_2019_01_30.yaml  managementVersion_2019_10_22.yaml  managementVersion_2019_11_05.yaml  managementVersion_2020_02_21.yaml  managementVersion_2020_07_07.yaml  managementVersion_2020_07_22.yaml  managementVersion_2021_05_11.yaml  managementVersion_2021_12_07.yaml  managementVersion_2022_08_03.yaml  managementVersion_vnext.yaml  module_management.yaml  workload.yaml  workloadVersion_2018_06_28.yaml  workloadVersion_2018_12_30.yaml  workloadVersion_2019_01_30.yaml  workloadVersion_2020_07_07.yaml  workloadVersion_2020_07_22.yaml  workloadVersion_2020_10_10.yaml
edgelet/aziot-edge/: Cargo.toml
edgelet/aziot-edged/: Cargo.toml
edgelet/aziot-edged-old/: Cargo.toml
edgelet/aziot-secret/: Cargo.toml  README.md
edgelet/cert-client/: Cargo.toml
edgelet/contrib/: README.md
edgelet/doc/: devguide.md  est.md  modules.md  product-info.plantuml  testiotedgedapi.md  workloadsockets.md
edgelet/docker-mri/: Cargo.toml
edgelet/docker-rs/: Cargo.toml  docker-swagger.yaml
edgelet/dps/: Cargo.toml
edgelet/dps/src/: dps.rs  (+4 more)
edgelet/edge-agent/: Cargo.toml
edgelet/edgelet/: Cargo.toml
edgelet/edgelet-config/: Cargo.toml
edgelet/edgelet-core/: Cargo.toml
edgelet/edgelet-docker/: Cargo.toml
edgelet/edgelet-grpc/: Cargo.toml  build.rs
edgelet/edgelet-hsm/: Cargo.toml
edgelet/edgelet-http/: Cargo.toml
edgelet/edgelet-http-external-provisioning/: Cargo.toml
edgelet/edgelet-http-hosting/: Cargo.toml
edgelet/edgelet-http-identity/: Cargo.toml
edgelet/edgelet-http-keyservice/: Cargo.toml
edgelet/edgelet-http-mgmt/: Cargo.toml  README.md
edgelet/edgelet-http-workload/: Cargo.toml  README.md
edgelet/edgelet-image-cleanup/: Cargo.toml
edgelet/edgelet-iothub/: Cargo.toml
edgelet/edgelet-kube/: Cargo.toml
edgelet/edgelet-settings/: Cargo.toml
edgelet/edgelet-shell/: Cargo.toml
edgelet/edgelet-test-utils/: Cargo.toml
edgelet/edgelet-utils/: Cargo.toml
edgelet/external-provisioning/: Cargo.toml  README.md
edgelet/hosting/: Cargo.toml  README.md
edgelet/hsm-rs/: Cargo.toml  README.md
edgelet/hsm-sys/: .gitignore  Cargo.toml  README-TPM.md  README.md  build.rs
edgelet/hyper-named-pipe/: Cargo.toml
edgelet/identity/: Cargo.toml  README.md
edgelet/identity-client/: Cargo.toml
edgelet/iotedge/: Cargo.toml
edgelet/iotedge-diagnostics/: Cargo.toml
edgelet/iotedge-proxy/: Cargo.toml
edgelet/iotedged/: Cargo.toml  build.rs
edgelet/iotedged-eventlog-messages/: Cargo.toml  build.rs
edgelet/iothubservice/: Cargo.toml
edgelet/iothubservice-rs/: Cargo.toml  README.md  service-swagger.json
edgelet/keyservice/: Cargo.toml  README.md
edgelet/kube-client/: Cargo.toml
edgelet/management/: Cargo.toml  README.md
edgelet/mini-sntp/: Cargo.toml
edgelet/provisioning/: Cargo.toml
edgelet/secret-store/: Cargo.toml  README.md
edgelet/signal-future/: Cargo.toml
edgelet/support-bundle/: Cargo.toml
edgelet/systemd/: Cargo.toml
edgelet/tokio-named-pipe/: Cargo.toml
edgelet/tokio-named-pipes/: Cargo.toml
edgelet/update-identity-hook/: Cargo.toml  build-image.sh
edgelet/win-logger/: Cargo.toml
edgelet/workload/: Cargo.toml  README.md
shellrt-containerd/: Cargo.toml
shellrt-containerd/containerd-grpc/: Cargo.toml  README.md  build.rs
shellrt-containerd/src/: main.rs  sock_to_tcp_proxy.rs
(+7589 files in other folders)
