[package]
name = "azsecretd"
version = "0.1.0"
authors = ["R25l84IHeXjIxy6HO1QXn0y0Dq9mt8EN <67037013+R25l84IHeXjIxy6HO1QXn0y0Dq9mt8EN@users.noreply.github.com>"]
edition = "2018"

[dependencies]
# base64 = "0.12"
bytes = "0.5"
failure = "0.1"
hyper = "0.13"
hyper-tls = "0.4"
hyperlocal = "0.7"
iotedge-aad = { git = "https://github.com/dmolokanov/iotedge-aad" }
aziot-key-client-async = { path = "extern/iot-identity-service/key/aziot-key-client-async" }
aziot-key-common = { path = "extern/iot-identity-service/key/aziot-key-common" }
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
# log = "0.4"
# percent-encoding = "2.1"
regex = "1.3"
reqwest = "0.10"
ring = { version = "0.16", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5"

rocksdb = { version = "0.14", optional = true }
rusqlite = { version = "0.23", optional = true }

[features]
default = ["rocksdb"]

sqlite = ["rusqlite"]
