[package]
name = "est-rs"
version = "0.1.0"
authors = ["Kevin Dawkins <kkdawkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
openssl-sys = "0.9"
openssl = "0.10"