[package]
name = "edge-proxy"
description = "edge-proxy is a HTTPS proxy server to organize secure edge modules communication"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
failure = "0.1.5"
env_logger = "0.6.2"
log = "0.4.7"
clap = "2.33.0"
config = { version = "0.9.3", features = ["yaml"] }
serde = { version = "1.0.97", features = ["derive"] }
url = "1.7"
url_serde = "0.2.0"
tokio = "0.1.22"
hyper = "0.12.33"
futures = "0.1.28"
native-tls = "0.2.3"
hyper-tls = "0.3.2"
http = "0.1.18"
tokio-signal = "0.2.7"

[dev-dependencies]
tempfile = "3.1.0"
openssl = "0.10.24"

