[workspace]
members = [
    "aziot-edged",
    "docker-rs",
    "edgelet-core",
    "edgelet-docker",
    "edgelet-http",
    "edgelet-http-mgmt",
    "edgelet-http-workload",
    "edgelet-image-cleanup",
    "edgelet-settings",
    "edgelet-utils",
    "iotedge",
    "support-bundle",
]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
# Release builds will have full symbols. The packaging phase will strip symbols from binaries and
# make them available in a separate package.
# Notes: Snaps don't have a good story for debug symbols, so for now we'll override this setting in
# the snapcraft.yaml file by setting CARGO_PROFILE_RELEASE_DEBUG=0.
debug = 2
