[package]
name = "containrs-cli"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
containrs = { path = "../containrs" }
docker-reference = { path = "../docker-reference" }

clap = "~2.33.0"
failure = "0.1"
hyper = { version = "0.13.0-alpha.2", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha.2"
log = "0.4"
pretty_env_logger = "0.3"
tokio = "0.2.0-alpha.5"
