[package]
name = "containrs"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
docker-reference = { path = "../docker-reference" }
docker-scope = { path = "../docker-scope" }
oci-digest = { path = "../oci-digest" }
oci-distribution = { path = "../oci-distribution" }
oci-image = { path = "../oci-image" }
www-authenticate = { path = "../www-authenticate" }

bytes = "0.4"
failure = "0.1"
futures-preview = "0.3.0-alpha.19"
headers = "0.2.3"
http = "0.1"
log = "0.4"
reqwest = { version = "0.10.0-alpha.1", features = ["unstable-stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.5"
