[package]
name = "containrs"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
docker-reference = { path = "../docker-reference" }
docker-scope = { path = "../docker-scope" }
oci-digest = { path = "../oci-digest" }
oci-distribution = { path = "../oci-distribution" }
oci-image = { path = "../oci-image" }
www-authenticate = { path = "../www-authenticate" }

bytes = "0.5"
failure = "0.1"
futures = "0.3"
# TODO: update to headers 0.3 (once it's released)
headers = { git = "https://github.com/hyperium/headers.git" }
log = "0.4"
# TODO: update to reqwest 0.10 (once it's released)
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.5"
