[package]
name = "api-proxy-module"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.11"
chrono = "0.4"
env_logger = "0.7"
envsubst = "0.2"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
md5 = "0.7"
regex = "1.3"
serde_json = "1.0"
tokio = { version = "0.2", features = ["tcp", "time", "process","signal","sync"] }

azure-iot-mqtt = { path = "./rust-sdk/azure-iot-mqtt" }
edgelet-client = { path = "../../mqtt/edgelet-client" }
mqtt3 = { path = "../../mqtt/mqtt3" }

[dev-dependencies]
lazy_static = "1.4"
matches = "0.1"
mockito = "0.25"
test-case = "1.0"
tokio = { version = "0.2", features = ["macros"] }
