[package]
name = "api-proxy-module"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
license = "MIT"
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = "0.4"
env_logger = "0.9"
envsubst = "0.2"
futures-util = "0.3"
hyper = "0.14"
log = "0.4"
regex = "1"
sha2 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["signal", "rt-multi-thread"] }
percent-encoding = "2"
url = "2"

azure-iot-mqtt = { path = "./rust-sdk/azure-iot-mqtt" }
edgelet-client = { path = "../../mqtt/edgelet-client" }
mqtt3 = { path = "../../mqtt/mqtt3" }

[dev-dependencies]
lazy_static = "1"
matches = "0.1"
mockito = "0.31"
tokio = { version = "1", features = ["macros"] }
