[package]
name = "edgehub-proxy"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
clap = "2.31"
env_logger = "0.5"
hyper = "0.14"
thiserror = "1"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1", features = ["rt","macros"] }
url = "1.7"
chrono = "0.4"

edgelet-utils = { path = "../../edgelet/edgelet-utils" }
edgelet-client = { path = "../../mqtt/edgelet-client" }

[profile.release]
lto = true
