[package]
name = "edgehub-proxy"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "2.31"
env_logger = "0.9"
hyper = "0.12.36"
log = "0.4"
serde_json = "1.0"
thiserror = "1.0"
tokio = "0.1"
url = "2.2"

edgelet-http = { path = "../../edgelet/edgelet-http" }
edgelet-utils = { path = "../../edgelet/edgelet-utils" }
workload = { path = "../../edgelet/workload" }

[profile.release]
lto = true
