[package]
name = "edgehub-proxy"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["cargo", "env"] }
env_logger = "0.9"
hyper = "0.14"
log = "0.4"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
url = "2"

edgelet-utils = { path = "../../edgelet/edgelet-utils" }
edgelet-client = { path = "../../mqtt/edgelet-client" }

[profile.release]
lto = true
