[package]
name = "snitch"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false

[dependencies]
azure_sdk_for_rust = "0.9"
chrono = "0.4"
futures = "0.1"
http = "0.1"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
tokio = "0.1"
tokio-uds = "0.2"
url = "1.7"
url_serde = "0.2"
