[package]
name = "aziot-edged"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.9"
clap = "2.31"
chrono = "0.4"
env_logger = "0.5"
failure = "0.1"
foreign-types-shared = "0.1"
futures = "0.1"
hyper = "0.12.17"
hyper-tls = { version = "0.3", optional = true }
log = "0.4"
openssl = "0.10"
serde_json = "1.0"
serde = "1.0"
sha2 = "0.7.0"
tokio = "0.1.8"
tokio-signal = "0.2"
native-tls = "0.2"
url = "2"
url_serde = "0.2"

aziot-cert-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-identity-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-identity-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-key-client = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-key-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-key-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-key-openssl-engine = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
http-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
openssl2 = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
openssl-sys2 = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }

docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-http = { path = "../edgelet-http" }
edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
edgelet-http-workload = { path = "../edgelet-http-workload" }
edgelet-utils = { path = "../edgelet-utils" }
cert-client = { path = "../cert-client" }
identity-client = { path = "../identity-client" }

[dev_dependencies]
lazy_static = "1"
rand = "0.5"
tempdir = "0.3.7"

edgelet-test-utils = { path = "../edgelet-test-utils" }

[features]
default = ["runtime-docker"]
runtime-docker = []
