[package]
name = "aziot-edged"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2021"

[dependencies]
base64 = "0.13"
chrono = "0.4"
clap = { version = "4", features = ["cargo", "string"] }
futures-util = "0.3"
log = "0.4"
serde_json = "1"
sha2 = "0.10"
serde = "1"
tokio = { version = "1", features = ["macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
url = "2"

edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-http = { path = "../edgelet-http" }
edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
edgelet-http-workload = { path = "../edgelet-http-workload" }
edgelet-image-cleanup = { path = "../edgelet-image-cleanup" }
edgelet-settings = { path = "../edgelet-settings", features = ["settings-docker"] }

aziot-identity-client-async = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }
aziot-identity-common = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }
aziot-identity-common-http = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }

http-common = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }
logger = { git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/managed_by_identity" }
