[package]
name = "aziot-edged"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2021"

[dependencies]
base64 = "0.21"
chrono = "0.4"
clap = { version = "4", features = ["cargo", "string"] }
futures-util = "0.3"
log = "0.4"
serde_json = "1"
sha2 = "0.10"
serde = "1"
tokio = { version = "1", features = ["macros", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
url = "2"

edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-http = { path = "../edgelet-http" }
edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
edgelet-http-workload = { path = "../edgelet-http-workload" }
edgelet-image-cleanup = { path = "../edgelet-image-cleanup" }
edgelet-settings = { path = "../edgelet-settings", features = ["settings-docker"] }

aziot-identity-client-async = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-identity-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-identity-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }

http-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
logger = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
