[package]
name = "aziot-edged"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false
description = "The aziot-edged is the main binary for the IoT edge daemon."
homepage = "https://aka.ms/iotedge"
license = "MIT"


[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

aziot-identity-client-async = { workspace = true }
aziot-identity-common = { workspace = true }
aziot-identity-common-http = { workspace = true }
http-common = { workspace = true }
logger = { workspace = true }

edgelet-core = { path = "../edgelet-core" }
edgelet-docker = { path = "../edgelet-docker" }
edgelet-http = { path = "../edgelet-http" }
edgelet-http-mgmt = { path = "../edgelet-http-mgmt" }
edgelet-http-workload = { path = "../edgelet-http-workload" }
edgelet-image-cleanup = { path = "../edgelet-image-cleanup" }
edgelet-settings = { path = "../edgelet-settings", features = ["settings-docker"] }
