[package]
authors = ["Azure IoT Edge Devs"]
edition = "2018"
name = "cert-client"
publish = false
version = "0.1.0"

[dependencies]
failure = "0.1"
futures = "0.1"
hyper = "0.12"
log = "0.4"
percent-encoding = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typed-headers = "0.1"
url = "2"

aziot-cert-common-http = {git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/bad_uri_on_central_block"}
aziot-key-common = {git = "https://github.com/nyanzebra/iot-identity-service", branch = "fix/bad_uri_on_central_block"}
edgelet-core = {path = "../edgelet-core"}
edgelet-http = {path = "../edgelet-http"}
