[package]
name = "cert-client"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.1"
hyper = "0.12"
log = "0.4"
percent-encoding = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
typed-headers = "0.1"
url = "2"

aziot-cert-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.2" }
aziot-key-common = { git = "https://github.com/Azure/iot-identity-service", branch = "release/1.2" }
edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
