[package]
name = "docker-mri"
version = "0.1.0"
authors = ["Azure IoT Edge Devs <edgedevs@microsoft.com"]
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.7"

docker-rs = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-utils = { path = "../edgelet-utils" }

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.4"

[dev_dependencies]
tempfile = "2"
time = "0.1"

edgelet-test-utils = { path = "../edgelet-test-utils" }
