[package]
authors = ["Azure IoT Edge Devs"]
edition = "2021"
name = "docker"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1"
hyper = { version = "0.14", features = ["client", "http1"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["time"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

edgelet-test-utils = { path = "../edgelet-test-utils" }
