[package]
name = "docker"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }


[dev-dependencies]
tokio = { workspace = true }

edgelet-test-utils = { path = "../edgelet-test-utils" }


[lints]
workspace = true
