[package]
name = "dps"
version = "0.1.0"
authors = ["Janice D'Sa <jadsa@microsoft.com>"]

[dependencies]
base64 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.1"
hyper = "0.11"
log = "0.4"
percent-encoding = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
tokio-timer = "0.1"
url = "1.7"

edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
edgelet-utils = { path = "../edgelet-utils" }

[dev_dependencies]
tokio-core = "0.1"
