[package]
edition = "2018"
name = "edge-agent"
version = "0.1.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}

edgelet-core = {path = "../edgelet-core"}
# edgelet-settings = {path = "../edgelet-settings", features = ["settings-docker"]}

[dev-dependencies]
rand = "0.8.4"
tempfile = "3.2"
