[package]
edition = "2018"
name = "edge-agent"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
futures-core = "0.3"
futures-util = "0.3"
json-patch = "0.2.6"
lazy_static = "1.4"
log = "0.4"
native-tls = "0.2"
percent-encoding = "2.1"
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
url = "2.2"

aziot-cert-client-async = {git = "https://github.com/Azure/iot-identity-service", branch = "main"}
aziot-identity-client-async = {git = "https://github.com/Azure/iot-identity-service", branch = "main"}
aziot-identity-common = {git = "https://github.com/Azure/iot-identity-service", branch = "main"}
aziot-key-client-async = {git = "https://github.com/Azure/iot-identity-service", branch = "main"}
aziot-key-common = {git = "https://github.com/Azure/iot-identity-service", branch = "main"}
azure-iot-mqtt = {path = "../../edge-modules/api-proxy-module/rust-sdk/azure-iot-mqtt"}
docker = {path = "../docker-rs"}
edgelet-core = {path = "../edgelet-core"}
edgelet-settings = {path = "../edgelet-settings", features = ["settings-docker"]}

[dev-dependencies]
edgelet-test-utils = {path = "../edgelet-test-utils"}
rand = "0.8.4"
simple_logger = "1.13.0"
tempfile = "3.2"
