[package]
name = "edgelet-config"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
base64 = "0.9"
config = "0.9.2"
failure = "0.1"
log = "0.4"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.0"
url = "1.7"
url_serde = "0.2"
yaml-rust = "0.4"

edgelet-core = { path = "../edgelet-core" }
edgelet-utils = { path = "../edgelet-utils" }

[dev_dependencies]
tempdir = "0.3.7"

edgelet-docker = { path = "../edgelet-docker" }
