[package]
name = "edgelet-core"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
hyper = "0.14"
lazy_static = "1.4"
log = "0.4"
nix = "0.26"
num_cpus = "1.8.0"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["parking_lot", "sync"] }
url = "2"

aziotctl-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
edgelet-settings = { path = "../edgelet-settings" }
