[package]
name = "edgelet-core"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
edition = "2024"
publish = false


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

aziotctl-common = { workspace = true }

edgelet-settings = { path = "../edgelet-settings" }


[lints]
workspace = true
