[package]
authors = ["Azure IoT Edge Devs"]
edition = "2021"
name = "edgelet-docker"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
futures = "0.3"
hex = "0.4"
hyper = "0.14"
log = "0.4"
nix = "0.24"
serde = "1"
serde_json = "1"
sysinfo = "0.25"
thiserror = "1"
tokio = "1"
url = "2"

aziot-cert-client-async = { git = "https://github.com/Azure/iot-identity-service", branch = "feature/dps_certs" }
aziot-cert-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "feature/dps_certs" }
config-common = { git = "https://github.com/Azure/iot-identity-service", branch = "feature/dps_certs" }
docker = { path = "../docker-rs" }
edgelet-core = { path = "../edgelet-core" }
edgelet-settings = { path = "../edgelet-settings", features = ["settings-docker"] }
edgelet-utils = { path = "../edgelet-utils" }
http-common = { git = "https://github.com/Azure/iot-identity-service", branch = "feature/dps_certs" }
libc = "0.2.66"
